--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Nutritive</string>
+    <string name="open_nav">Ouvrir le menu de navigation</string>
+    <string name="close_nav">Fermer le menu de navigation</string>
 </resources>
